tests/fail/06_wrong_return_type.lang
// ОЖИДАЕТСЯ ОШИБКА: тип возвращаемого значения не совпадает
функция тест() : целое {
    вернуть истина; // Ошибка семантики: Тип возвращаемого значения не совпадает
}

функция Начало() : целое {
    вернуть 0;
}
